_SOFTWARE_FACTORY/_archive/veligo/ralph-wiggum/logs/T015_20260112_225105.log
[96m[1m| [0m[90m Read     [0mveligo-platform/tests/e2e/api/tracking.api.spec.ts
[94m[1m| [0m[90m Grep     [0m/api/tracking
[94m[1m| [0m[90m Glob     [0m{"pattern":"**/tracking*.rs"}
[94m[1m| [0m[90m Grep     [0mtest\.skip|test\.todo
[96m[1m| [0m[90m Read     [0mveligo-platform/backend/src/bin/http-server.rs
[94m[1m| [0m[90m Glob     [0m{"pattern":"**/modules/tracking*/**/*.rs"}
[91m[1m| [0m[90m Bash     [0mTest tracking API endpoint response
[94m[1m| [0m[90m Glob     [0mveligo-platform/backend/src
[91m[1m| [0m[90m Bash     [0mRun Rust tracking tests

warning: unused variable: `builder`
   --> backend/src/infrastructure/sms/templates.rs:434:13
    |
434 |         let builder = SmsTemplateBuilder::new();
    |             ^^^^^^^ help: if this is intentional, prefix it with an underscore: `_builder`

warning: unused variable: `layer`
   --> backend/src/middleware/cors.rs:236:13
    |
236 |         let layer = builder.build();
    |             ^^^^^ help: if this is intentional, prefix it with an underscore: `_layer`

warning: variable does not need to be mutable
   --> backend/src/middleware/rate_limiter.rs:796:13
    |
796 |         let mut config = RateLimitConfig::default();
    |             ----^^^^^^
    |             |
    |             help: remove this `mut`

warning: unused variable: `prev_start`
   --> backend/src/services/reporting/kpi_service.rs:733:14
    |
733 |         let (prev_start, prev_end) = query.previous_period();
    |              ^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_prev_start`

Some errors have detailed explanations: E0432, E0599.
For more information about an error, try `rustc --explain E0432`.
warning: `veligo-api` (lib test) generated 29 warnings
error: could not compile `veligo-api` (lib test) due to 4 previous errors; 29 warnings emitted

[94m[1m| [0m[90m Glob     [0mveligo-platform/backend/src/api
[91m[1m| [0m[90m Bash     [0mGet compilation errors details
[91m[1m| [0m[90m Bash     [0mGet build errors
[94m[1m| [0m[90m Grep     [0mtracking_routes
[96m[1m| [0m[90m Read     [0mveligo-platform/backend/src/infrastructure/tracking/routes.rs
[91m[1m| [0m[90m Bash     [0mGet build errors with path

error[E0432]: unresolved import `http`
error[E0599]: no function or associated item named `from_str` found for struct `BigDecimal` in the current scope
error[E0599]: no function or associated item named `from_str` found for struct `BigDecimal` in the current scope
error[E0599]: no method named `uri` found for struct `tonic::Request<T>` in the current scope
error: could not compile `veligo-api` (lib) due to 4 previous errors; 6 warnings emitted

[91m[1m| [0m[90m Bash     [0mGet all build errors
[91m[1m| [0m[90m Bash     [0mGet full build output

warning: profiles for the non root package will be ignored, specify profiles at the workspace root:
package:   /Users/sylvain/_LAPOSTE/_VELIGO2/veligo-platform/backend/Cargo.toml
workspace: /Users/sylvain/_LAPOSTE/_VELIGO2/veligo-platform/Cargo.toml
   Compiling veligo-api v0.1.0 (/Users/sylvain/_LAPOSTE/_VELIGO2/veligo-platform/backend)
error[E0432]: unresolved import `http`
  --> backend/src/middleware/rate_limiter_grpc.rs:12:5
   |
12 | use http;
   |     ^^^^ no external crate `http`
   |
help: consider importing one of these items instead
   |
12 | use crate::infrastructure::http;
   |     +++++++++++++++++++++++
12 | use aws_sdk_s3::config::http;
   |     ++++++++++++++++++++
12 | use axum::http;
   |     ++++++

warning: unused import: `Method`
 --> backend/src/api/test_api.rs:8:12
  |
8 |     http::{Method, StatusCode},
  |            ^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `error`
 --> backend/src/infrastructure/email/queue.rs:9:22
  |
9 | use tracing::{debug, error, info, warn};
  |                      ^^^^^

warning: unused import: `error`
  --> backend/src/infrastructure/email/mod.rs:23:15
   |
23 | use tracing::{error, info, warn};
   |               ^^^^^

warning: unused import: `error`
  --> backend/src/infrastructure/erp/erp_client.rs:12:22
   |
12 | use tracing::{debug, error, info};
   |                      ^^^^^

warning: unused import: `async_trait::async_trait`
 --> backend/src/infrastructure/modules/registry.rs:7:5
  |
7 | use async_trait::async_trait;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `error`
  --> backend/src/infrastructure/multimodal/tcl_client.rs:18:22
   |
18 | use tracing::{debug, error, info, warn};
   |                      ^^^^^

error[E0599]: no function or associated item named `from_str` found for struct `BigDecimal` in the current scope
    --> backend/src/api/test_api.rs:1139:79
     |

[96m[1m| [0m[90m Read     [0mveligo-platform/backend/src/middleware/rate_limiter_grpc.rs
[96m[1m| [0m[90m Read     [0mveligo-platform/backend/src/api/test_api.rs
[96m[1m| [0m[90m Read     [0mveligo-platform/backend/src/middleware/rate_limiter_grpc.rs
[91m[1m| [0m[90m Bash     [0mCheck http usage in file
[96m[1m| [0m[90m Read     [0mveligo-platform/backend/src/api/test_api.rs
[92m[1m| [0m[90m Edit     [0mveligo-platform/backend/src/middleware/rate_limiter_grpc.rs
[94m[1m| [0m[90m Grep     [0mBigDecimal::from
[91m[1mError: [0mError: ENOSPC: no space left on device, open '/Users/sylvain/.local/share/opencode/storage/part/msg_bb430e04d0015c73nRIlB67ywH/prt_bb430f336001nLHmnR6ZbG6WDZ.json'
